--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI= mongodb+srv://karanbonagiri:gjqDmNJWDZODgDT0@cluster0.u5ymn.mongodb.net/
-PORT = 5000
+MONGO_URI= mongodb+srv://saibonagiri228:7KHwwkVNx8WTjte5@cluster0.k0czp.mongodb.net/
+PORT = 4500
 SECRET_KEY=kdkddakjazkckzklcazl
