--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,6 @@
-MONGO_URI= mongodb+srv://saibonagiri228:7KHwwkVNx8WTjte5@cluster0.k0czp.mongodb.net/
+MONGO_URI= mongodb+srv://saibonagiri228:7KHwwkVNx8WTjte5@cluster0.k0czp.mongodb.net/test
 PORT = 4500
 SECRET_KEY=kdkddakjazkckzklcazl
+CLOUD_NAME=dfn0kbrqy
+API_KEY=351647917315828
+API_SECRET= -oZkGmtzKRsm4T1Oc49RiGYvavM
